force-app/main/default/objects/Appeal__c/Appeal__c.object-meta.xml
<CustomObject>
    <label>Appeal</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Appeal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>