force-app/main/default/objects/Appeal__c/fields/Adjudicator__c.field-meta.xml
<CustomField>
    <fullName>Adjudicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjudicator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>