force-app/main/default/objects/Appeal__c/fields/Appeal_Date__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Date__c</fullName>
    <label>Appeal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>