force-app/main/default/objects/Appeal__c/fields/AppealAdjudicationComment__c.field-meta.xml
<CustomField>
    <fullName>AppealAdjudicationComment__c</fullName>
    <label>Appeal Adjudication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>