force-app/main/default/objects/Appeal__c/fields/AppealComments__c.field-meta.xml
<CustomField>
    <fullName>AppealComments__c</fullName>
    <label>Appeal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>