force-app/main/default/objects/Appeal__c/fields/AppealResult__c.field-meta.xml
<CustomField>
    <fullName>AppealResult__c</fullName>
    <label>Appeal Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>