force-app/main/default/objects/Appeal__c/fields/Is_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Is_Ongoing__c</fullName>
    <formula>OR( 
				ISBLANK(TEXT(Status__c)), 
				AND(
								ISPICKVAL(Status__c, &#39;Approved&#39;),
								ISBLANK(TEXT(AppealResult__c))
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ongoing</label>
    <type>Checkbox</type>
</CustomField>