force-app/main/default/objects/Appeal__c/validationRules/Read_Only_If_Closed_or_Declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_Only_If_Closed_or_Declined</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
            OR(ISPICkVAL(Status__c,&#39;Closed&#39;),ISPICkVAL(Status__c,&#39;Declined&#39;), ISPICkVAL(Status__c,&#39;Cancelled&#39;)) &amp;&amp; NOT(ISCHANGED(Status__c)), 
            OR(
                        ISCHANGED(AppealAdjudicationComment__c), 
                        ISCHANGED(AppealComments__c),
                        ISCHANGED(AppealResult__c),
                        ISCHANGED(Opportunity__c),
                        ISCHANGED(Case__c)   
            ),     
            false
        )</errorConditionFormula>
    <errorMessage>Closed Appeal is not editable</errorMessage>
</ValidationRule>