force-app/main/default/objects/Appeal__c/validationRules/Validate_Appeal_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Appeal_Status</fullName>
    <active>true</active>
    <description>Appeal status should not change from declined to any other status, from Closed to any other status, form Approved to declined.</description>
    <errorConditionFormula>IF(
            ISCHANGED(Status__c),
            OR(
                            AND(
                                OR(
                                    ISPICKVAL(PRIORVALUE(Status__c),&#39;Declined&#39;),
                                    ISPICKVAL(PRIORVALUE(Status__c),&#39;Closed&#39;),
                                                            ISPICKVAL(PRIORVALUE(Status__c),&#39;Cancelled&#39;)
                                ),
                                ISCHANGED(Status__c)
                ),
                            AND(
                                            ISPICKVAL(PRIORVALUE(Status__c),&#39;Approved&#39;),
                                            ISPICKVAL(Status__c,&#39;Declined&#39;)
            )
            ),
            false
        )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Appeal status cannot changed once declined or closed. Approved Appeal can only be closed.</errorMessage>
</ValidationRule>